--- a/web/newcss.css
+++ b/web/newcss.css
@@ -1,10 +1,69 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 23/03/2021, 19:58:09
-    Author     : User
-*/
+.conteiner{
+    flex-direction: column;
+    width: 400px;
+    margin: 0 auto;
+    display: flex;
 
+
+}
+
+.conteiner2{
+    flex-direction: column;
+    width: 400px;
+    margin: 0 auto;
+    display: flex;
+
+
+}
+
+
+body{
+    background: #181818;
+    display: flex;
+    height: 100vh;
+    align-items: center;
+
+
+}
+
+input,button{
+    height: 65px;
+    border-radius: 5px;
+    padding: 0 20px;
+    font-size: 1.2rem;
+    border: 0;
+
+
+}
+
+input{
+    background: #2E2E2E;
+    margin-bottom: 2px;
+    color: #aaa;
+
+
+}
+
+button{
+    margin: 20px 0;
+    background: none;
+    border: 2px solid #2E2E2E;
+    color: #AAA;
+
+}
+
+h1{
+    color: #AAA;
+    margin: 20px auto;
+
+
+}
+
+.Inr Inr-eye{
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
+    color: #aaa;
+
+}
